--- a/bug/templates/create_bug.html
+++ b/bug/templates/create_bug.html
@@ -40,10 +40,7 @@ var ue = UE.getEditor('content');
                  <div class="col-md-12">
                    <div class="white-box">
                         <form class="form-horizontal" method="post" action="/create_action/">
-                            <div class="form-group">
-                            <label class="col-md-2 control-label">{{ project.name }}</label>
-                                <div name="pid">{{ project.id }}</div>
-                          </div>
+                            <input name="pid" value="{{ project.id }}" hidden>
                           <div class="form-group">
                             <label class="col-md-2 control-label">标题</label>
                             <div class="col-md-10">
