--- a/bug/templates/create_bug.html
+++ b/bug/templates/create_bug.html
@@ -28,7 +28,7 @@ var ue = UE.getEditor('content');
                     <li class="active"><a href="#">新建缺陷</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">{{ user }}</a></li>
+                    <li><a href="/user_info/">{{ user }}</a></li>
                     <li><a href="/logout/">退出</a></li>
                 </ul>
             </div>
@@ -78,7 +78,7 @@ var ue = UE.getEditor('content');
                             <label class="col-sm-2 control-label">处理人</label>
                             <div class="col-sm-10">
                               <select  name="Dealing_people" class="form-control" style="width: 800px;">
-                                <option>开发一</option>
+                                <option>1</option>
                                 <option>开发二</option>
                                 <option>开发三</option>
                                 <option>开发四</option>
