--- a/bug/templates/my_projects.html
+++ b/bug/templates/my_projects.html
@@ -22,7 +22,7 @@
                     <li><a href="/my_teams/">我的团队</a> </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">{{ user }}</a></li>
+                    <li><a href="/user_info/">{{ user }}</a></li>
                     <li><a href="/logout/">退出</a></li>
                 </ul>
             </div>
